notebooks: add dataset check

--- a/Notebooks/train.ipynb
+++ b/Notebooks/train.ipynb
@@ -25,8 +25,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4f75305a-a672-4eb5-861a-71814be7c8c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "expected dataset path: C:\\Users\\Dell\\Documents\\Customer-Churn-Prediction\\Data\\raw\n",
+      "exists? True\n",
+      "files in data/raw:\n",
+      "- 'Churn_Modelling.csv' 684858 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dataset check\n",
+    "from pathlib import Path\n",
+    "p = Path(\"data\")/\"raw\"\n",
+    "print(\"expected dataset path:\", p.resolve())\n",
+    "print(\"exists?\", p.exists())\n",
+    "if p.exists():\n",
+    "    files = list(p.iterdir())\n",
+    "    print(\"files in data/raw:\")\n",
+    "    for f in files:\n",
+    "        print(\"-\", repr(f.name), f.stat().st_size, \"bytes\")\n",
+    "else:\n",
+    "    print(\"data/raw not found. Create data/raw and place churn_modelling.csv inside.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b6e39e6-2b8f-4dd8-933a-bb8ed528f9eb",
    "metadata": {},
    "outputs": [],
    "source": []
