notebooks: prepare X/y and list numeric & categorical features

--- a/Notebooks/train.ipynb
+++ b/Notebooks/train.ipynb
@@ -237,8 +237,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a43405aa-4c27-4f51-a442-4acb36bf2850",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numeric cols: ['CreditScore', 'Age', 'Tenure', 'Balance', 'NumOfProducts', 'HasCrCard', 'IsActiveMember', 'EstimatedSalary']\n",
+      "Categorical cols: ['Geography', 'Gender']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CreditScore</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>650.528800</td>\n",
+       "      <td>96.653299</td>\n",
+       "      <td>350.00</td>\n",
+       "      <td>584.00</td>\n",
+       "      <td>652.000</td>\n",
+       "      <td>718.0000</td>\n",
+       "      <td>850.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>38.921800</td>\n",
+       "      <td>10.487806</td>\n",
+       "      <td>18.00</td>\n",
+       "      <td>32.00</td>\n",
+       "      <td>37.000</td>\n",
+       "      <td>44.0000</td>\n",
+       "      <td>92.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tenure</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>5.012800</td>\n",
+       "      <td>2.892174</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>5.000</td>\n",
+       "      <td>7.0000</td>\n",
+       "      <td>10.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Balance</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>76485.889288</td>\n",
+       "      <td>62397.405202</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>97198.540</td>\n",
+       "      <td>127644.2400</td>\n",
+       "      <td>250898.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>1.530200</td>\n",
+       "      <td>0.581654</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>4.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.705500</td>\n",
+       "      <td>0.455840</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.515100</td>\n",
+       "      <td>0.499797</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>100090.239881</td>\n",
+       "      <td>57510.492818</td>\n",
+       "      <td>11.58</td>\n",
+       "      <td>51002.11</td>\n",
+       "      <td>100193.915</td>\n",
+       "      <td>149388.2475</td>\n",
+       "      <td>199992.48</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   count           mean           std     min       25%  \\\n",
+       "CreditScore      10000.0     650.528800     96.653299  350.00    584.00   \n",
+       "Age              10000.0      38.921800     10.487806   18.00     32.00   \n",
+       "Tenure           10000.0       5.012800      2.892174    0.00      3.00   \n",
+       "Balance          10000.0   76485.889288  62397.405202    0.00      0.00   \n",
+       "NumOfProducts    10000.0       1.530200      0.581654    1.00      1.00   \n",
+       "HasCrCard        10000.0       0.705500      0.455840    0.00      0.00   \n",
+       "IsActiveMember   10000.0       0.515100      0.499797    0.00      0.00   \n",
+       "EstimatedSalary  10000.0  100090.239881  57510.492818   11.58  51002.11   \n",
+       "\n",
+       "                        50%          75%        max  \n",
+       "CreditScore         652.000     718.0000     850.00  \n",
+       "Age                  37.000      44.0000      92.00  \n",
+       "Tenure                5.000       7.0000      10.00  \n",
+       "Balance           97198.540  127644.2400  250898.09  \n",
+       "NumOfProducts         1.000       2.0000       4.00  \n",
+       "HasCrCard             1.000       1.0000       1.00  \n",
+       "IsActiveMember        1.000       1.0000       1.00  \n",
+       "EstimatedSalary  100193.915  149388.2475  199992.48  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#  separate X, y and inspect numeric/categorical\n",
+    "if \"Exited\" not in df.columns:\n",
+    "    raise ValueError(\"CSV must contain 'Exited' target column.\")\n",
+    "\n",
+    "y = df[\"Exited\"].astype(int)\n",
+    "X = df.drop(columns=[\"RowNumber\",\"CustomerId\",\"Surname\",\"Exited\"], errors=\"ignore\")\n",
+    "num_cols = X.select_dtypes(include=[\"int64\",\"float64\"]).columns.tolist()\n",
+    "cat_cols = X.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+    "\n",
+    "print(\"Numeric cols:\", num_cols)\n",
+    "print(\"Categorical cols:\", cat_cols)\n",
+    "display(X.describe().T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a430304d-fae6-47de-829d-94883cc9270b",
    "metadata": {},
    "outputs": [],
    "source": []
