notebooks: create preprocessing pipeline ColumnTransformer(impute/scale/one-hot)

--- a/Notebooks/train.ipynb
+++ b/Notebooks/train.ipynb
@@ -416,8 +416,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "324add95-88dd-40d0-8c52-f1531a71d96c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn; print(sklearn.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "a430304d-fae6-47de-829d-94883cc9270b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing pipeline ready.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# construct transformers\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "num_pipe = Pipeline([\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "    (\"scaler\", StandardScaler())\n",
+    "])\n",
+    "\n",
+    "cat_pipe = Pipeline([\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"most_frequent\")),\n",
+    "    (\"onehot\", OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False))\n",
+    "])\n",
+    "\n",
+    "preproc = ColumnTransformer([\n",
+    "    (\"num\", num_pipe, num_cols),\n",
+    "    (\"cat\", cat_pipe, cat_cols)\n",
+    "])\n",
+    "print(\"Preprocessing pipeline ready.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd9a7593-41bf-40d7-9194-29589ba7208e",
    "metadata": {},
    "outputs": [],
    "source": []
