notebooks: split data(train/test) and run baseline Dummy classifier

--- a/Notebooks/train.ipynb
+++ b/Notebooks/train.ipynb
@@ -472,8 +472,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "dd9a7593-41bf-40d7-9194-29589ba7208e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train shape: (8000, 10) | Test shape: (2000, 10)\n",
+      "Train churn rate: 0.2037 | Test churn rate: 0.2035\n",
+      "\n",
+      "Baseline (most_frequent) metrics:\n",
+      "Accuracy: 0.7965\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.80      1.00      0.89      1593\n",
+      "           1       0.00      0.00      0.00       407\n",
+      "\n",
+      "    accuracy                           0.80      2000\n",
+      "   macro avg       0.40      0.50      0.44      2000\n",
+      "weighted avg       0.63      0.80      0.71      2000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  train/test split + baseline classifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.dummy import DummyClassifier\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "\n",
+    "# If X, y not defined (run earlier cells), raise helpful error\n",
+    "try:\n",
+    "    X\n",
+    "    y\n",
+    "except NameError:\n",
+    "    raise RuntimeError(\"X and y not defined. Run data loading and X/y prep cells first.\")\n",
+    "\n",
+    "# split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.20, stratify=y, random_state=42\n",
+    ")\n",
+    "print(f\"Train shape: {X_train.shape} | Test shape: {X_test.shape}\")\n",
+    "print(f\"Train churn rate: {y_train.mean():.4f} | Test churn rate: {y_test.mean():.4f}\")\n",
+    "\n",
+    "# baseline: always predict majority class\n",
+    "dummy = DummyClassifier(strategy=\"most_frequent\")\n",
+    "dummy.fit(X_train, y_train)\n",
+    "pred_dummy = dummy.predict(X_test)\n",
+    "print(\"\\nBaseline (most_frequent) metrics:\")\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, pred_dummy))\n",
+    "print(classification_report(y_test, pred_dummy, zero_division=0))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13a600d9-dfd2-47e8-86d3-346ca8f56823",
    "metadata": {},
    "outputs": [],
    "source": []
